--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">GPSurvey</string>
     <string name="start_measure_option">Mérés indítása</string>
+    <string name="calc_distance_option">Távolság számítása</string>
+    <string name="calc_area_option">Terület számítása</string>
+    <string name="save_point_data_option">Pontok fájlba mentése</string>
+    <string name="save_line_data_option">Vonal fájlba mentése</string>
+    <string name="save_area_data_option">Terület fájlba mentése</string>
     <string name="exit_option">Kilépés</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="save_point">Pont mérése</string>
 </resources>
