--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="X">X:</string>
     <string name="Y">Y:</string>
     <string name="Z">Z:</string>
-    <string name="save_point">Pont mérése</string>
+    <string name="save_point">Pont mentése</string>
 </resources>
