--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="Y">Y:</string>
     <string name="Z">Z:</string>
     <string name="save_point">Pont mentése</string>
+    <string name="eov">EOV:</string>
 </resources>
