--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="Z">Z:</string>
     <string name="save_point">Pont mentése</string>
     <string name="eov">EOV:</string>
+    <string name="dot_symbol">🌏</string>
 </resources>
