--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">GPSurvey</string>
-    <string name="start_measure_option">Mérés indítása</string>
+    <string name="GPS_start_option">GPS bekapcsolása</string>
+    <string name="start_point_measure">Pont mérése</string>
     <string name="point_format_option">Pont kijelzés formátuma</string>
     <string name="decimal_format_option">Decimális formátum</string>
     <string name="angle_min_sec_format_option">Fok - perc - mperc</string>
