--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="set_data_type">Adattípus megadása</string>
     <string name="kml_format">kml</string>
     <string name="txt_format">txt</string>
+    <string name="add_find_point_text">WGS vagy EOV koordináta megadása:</string>
+    <string name="find_point_direction">Irány:</string>
+    <string name="velocity">Sebesség:</string>
+    <string name="find_point_hint">Decimális Φ, Λ vagy Y, X</string>
+    <string name="find_point_arrow">find_point_arrow</string>
 </resources>
