--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="velocity">Sebesség:</string>
     <string name="find_point_hint">Decimális Φ, Λ vagy Y, X</string>
     <string name="find_point_arrow">find_point_arrow</string>
+    <string name="stop">Stop</string>
 </resources>
